--- a/index.html
+++ b/index.html
@@ -41,6 +41,30 @@
             </div>
         </div>
     </section>
+<section class="py-20 bg-black">
+    <div class="px-6 mb-10 flex justify-between items-end">
+        <div>
+            <h2 class="text-3xl font-serif">Follow the Vibe</h2>
+            <p class="text-gray-500 text-sm">@calido_rooftop on Instagram</p>
+        </div>
+        <a href="https://instagram.com/calido_rooftop" class="text-xs uppercase tracking-widest border-b border-amber-500 pb-1">View All</a>
+    </div>
+    
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-2 px-2">
+        <div class="aspect-square bg-gray-900 overflow-hidden">
+            <img src="images/food/fapus.jpeg" class="w-full h-full object-cover hover:scale-105 transition duration-500">
+        </div>
+        <div class="aspect-square bg-gray-900 overflow-hidden">
+            <img src="images/ambiance/sky_view.jpeg" class="w-full h-full object-cover hover:scale-105 transition duration-500">
+        </div>
+        <div class="aspect-square bg-gray-900 overflow-hidden">
+            <img src="images/food/asian_vegetable_noodles.jpeg" class="w-full h-full object-cover hover:scale-105 transition duration-500">
+        </div>
+        <div class="aspect-square bg-gray-900 overflow-hidden">
+            <img src="images/Hero/hero.jpeg" class="w-full h-full object-cover hover:scale-105 transition duration-500">
+        </div>
+    </div>
+</section>
     <a href="https://wa.me/2347025933333" class="fixed bottom-6 right-6 z-[100] bg-[#25d366] p-4 rounded-full shadow-2xl hover:scale-110 transition-transform flex items-center justify-center">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white"><path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.588-5.946 0-6.556 5.332-11.888 11.888-11.888 3.176 0 6.161 1.237 8.406 3.483 2.246 2.248 3.481 5.231 3.481 8.405 0 6.556-5.331 11.888-11.888 11.888-2.004 0-3.972-.511-5.712-1.482l-6.274 1.703zm6.308-4.113l.379.225c1.43.85 3.102 1.298 4.829 1.298 5.203 0 9.435-4.232 9.435-9.435 0-2.521-.981-4.89-2.763-6.673-1.783-1.782-4.15-2.763-6.671-2.763-5.204 0-9.436 4.232-9.436 9.435 0 1.834.532 3.623 1.54 5.158l.243.371-1.013 3.697 3.793-.972z"/></svg>
 </a>
