--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
     <nav class="fixed w-full z-50 p-6 flex justify-between items-center backdrop-blur-md bg-black/20">
-        <div class="text-xl font-bold tracking-[0.2em] uppercase text-amber-500">Cálido</div>
+<a href="index.html" class="block">
+    <img src="images/removebg.png" alt="Cálido Logo" class="h-8 md:h-10 w-auto object-contain">
+</a>
         <div class="space-x-6 text-xs uppercase tracking-widest">
             <a href="index.html" class="border-b border-amber-500">Home</a>
             <a href="menu.html" class="hover:text-amber-500 transition">Menu</a>
